# afm

./: .gitignore  CMakeLists.txt  README.md  build.sh  debug.sh  run.sh
common/: CMakeLists.txt  JSONUtil.h  processLock.h
common/src/: processLock.cpp
communications/: CMakeLists.txt
communications/mqtt/: CMakeLists.txt  MQTTClient.h  MQTTPacketOptions.h  MQTTTypes.h  README.md  iMQTTListener.h  iMQTTPacket.h  iMQTTProcessorListener.h
communications/mqtt/internal/: MQTTClient.h  MQTTConnectAckPacket.h  MQTTConnectPacket.h  MQTTDisconnectPacket.h  MQTTFactory.h  MQTTInstance.h  MQTTPacket.h  MQTTPingRequestPacket.h  MQTTPingResponsePacket.h  MQTTProcessor.h  MQTTPublishAckPacket.h  MQTTPublishCompletedPacket.h  MQTTPublishPacket.h  MQTTPublishReceivedPacket.h  MQTTPublishReleasedPacket.h  MQTTServer.h  MQTTSubscribeAckPacket.h  MQTTSubscribePacket.h  MQTTTrackedPacket.h  MQTTUnsubscribeAckPacket.h  MQTTUnsubscribePacket.h  iMQTTProcessorListener.h
communications/mqtt/schema/: mqttconnectoptions.schema.json  mqttoptions.schema.json  mqttsubscribeackoptions.schema.json  mqttsubscribeoptions.schema.json  mqttunsubscribeoptions.schema.json
communications/mqtt/src/: MQTTClient.cpp  MQTTConnectAckPacket.cpp  MQTTConnectPacket.cpp  MQTTDisconnectPacket.cpp  MQTTFactory.cpp  MQTTInstance.cpp  MQTTPacket.cpp  MQTTPacketOptions.cpp  MQTTPingRequestPacket.cpp  MQTTPingResponsePacket.cpp  MQTTProcessor.cpp  MQTTPublishAckPacket.cpp  MQTTPublishCompletedPacket.cpp  MQTTPublishPacket.cpp  MQTTPublishReceivedPacket.cpp  MQTTPublishReleasedPacket.cpp  MQTTServer.cpp  MQTTSubscribeAckPacket.cpp  MQTTSubscribePacket.cpp  MQTTTrackedPacket.cpp  MQTTUnsubscribeAckPacket.cpp  MQTTUnsubscribePacket.cpp
communications/mqtt/test/: main.cpp
communications/socket/: CMakeLists.txt  build.sh  iServerSocketListener.h  iSocket.h  iSocketListener.h  socketFactory.h
communications/socket/internal/: clientSocket.h  serverSocket.h  socket.h
communications/socket/src/: clientSocket.cpp  serverSocket.cpp  socket.cpp  socketFactory.cpp
communications/socket/test/: main.cpp
configuration/: README.md  amd64.cmake
